# dmst-handicap-list

./: Cargo.toml  competition.csv  gliderlist.csv
.github/: renovate.json5
.github/workflows/: ci.yml
assets/: competition.jinja  dmst.jinja  styles.css
src/: competition.rs  dmst.rs  main.rs  pdf.rs
src/snapshots/: daec_handicap_lists__tests__competition.snap  daec_handicap_lists__tests__dmst.snap  dmst_handicap_list__tests__main.snap
