[package]
name = "dmst-handicap-list"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.44"
csv = "=1.3.0"
headless_chrome = { version = "=1.0.15", default-features = false }
indoc = "=2.0.5"
tempfile = "=3.13.0"
url = "=2.5.2"

[dev-dependencies]
insta = "=1.41.0"
